@@ -1,11 +1,17 @@
-Wed Oct 10 2012
+
+Wed Oct 20 2012
 1. New features 
    * return empty stanfit object upon error such as incorrect data
      input, wrong argument specification, etc. Previously, it will 
      stop. So another mode is added for stanfit object.  
    * add function stan_demo() to run examples included in Stan. 
    * add function sflist2stanfit() to merge a list of stanfit objects into one,
-   * so some user level parallel can be done. 
+     to facilitate some kind of user-level parallelism. 
+   * add S3 method as.matrix, as.array, is.array, dim, dimnames for stanfit objects. 
+    
+2. Bug fixes 
+   * bug of setting parameter epsilon_pm for NUTS 
+   * 
 
 Tue Sep 25 2012
 1. Changes 
